[gd_scene load_steps=9 format=3 uid="uid://dyd0ga0ak7m3e"]

[ext_resource type="Script" uid="uid://h4lin804xjqy" path="res://Code/Autoloads/ui.gd" id="1_6c322"]
[ext_resource type="Script" uid="uid://t1evp3nd72xg" path="res://Code/Utilities/loading_screen.gd" id="2_3p64k"]
[ext_resource type="Script" uid="uid://chyikkb42fd7g" path="res://Code/Radials/radial_manager.gd" id="2_fuhdj"]
[ext_resource type="Script" uid="uid://cn3nicl1xdhqb" path="res://Code/Ui/player_ui.gd" id="2_k03pl"]
[ext_resource type="Script" uid="uid://ccgbf3pijgq37" path="res://Code/Radials/radial_menu_data.gd" id="3_74xe2"]
[ext_resource type="Resource" uid="uid://d1rgkuqwq21oq" path="res://Data/Audio/SFX/menu_select.tres" id="3_tqbpu"]
[ext_resource type="Resource" uid="uid://bwl5earidrct6" path="res://Data/Radials/pause_menu.tres" id="5_k03pl"]
[ext_resource type="Resource" uid="uid://d3cps7trygy47" path="res://Data/Radials/upgrades_menu.tres" id="6_u75ug"]

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_6c322")

[node name="PlayerUi" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(240, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_k03pl")
menu_close_sfx = ExtResource("3_tqbpu")

[node name="side_panel" type="PanelContainer" parent="PlayerUi"]
custom_minimum_size = Vector2(60, 180)
layout_mode = 0
offset_left = 180.0
offset_right = 240.0
offset_bottom = 180.0
theme_type_variation = &"SidePanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUi/side_panel"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="star_material_label" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "Star Matter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="star_material" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="speed_label" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "Speed levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="speed_level" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coll_label" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "Collectors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="collectors" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gen_label" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "Generators"
horizontal_alignment = 1
vertical_alignment = 1

[node name="generators" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="recyc_label" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "Recyclers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="recyclers" type="Label" parent="PlayerUi/side_panel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(40, 9)
layout_mode = 2
theme_type_variation = &"StarMaterialPlayUiLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="message" type="Label" parent="PlayerUi"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 20)
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0
theme_type_variation = &"UnlockMessage"
text = "you have unlocked something!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 2

[node name="RadialManager" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(1, 1)
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_top = 90.0
offset_right = 161.0
offset_bottom = 91.0
mouse_filter = 2
script = ExtResource("2_fuhdj")
radia_menu_datas = Array[ExtResource("3_74xe2")]([ExtResource("5_k03pl"), ExtResource("6_u75ug")])
menu_close_sfx = ExtResource("3_tqbpu")

[node name="LoadingScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(240, 180)
offset_right = 40.0
offset_bottom = 40.0
theme_type_variation = &"LoadingScreen"
script = ExtResource("2_3p64k")
time_between_chars = 0.5

[node name="loading_label" type="Label" parent="LoadingScreen"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_type_variation = &"LoadingLabel"
text = "Loading"
horizontal_alignment = 1
vertical_alignment = 1
